# unicode-hpp

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Jenkinsfile  LICENSE  README.md
cmake/: c++-standards.cmake  clang-tools.cmake  code-coverage.cmake  sanitizer-builds.cmake
generated_headers/: unicode_blocks_10.hpp  unicode_blocks_10_0_0.hpp  unicode_blocks_11_0_0.hpp  unicode_blocks_12_0_0.hpp  unicode_blocks_12_1_0.hpp  unicode_blocks_13_0_0.hpp  unicode_blocks_14_0_0.hpp  unicode_blocks_15_0_0.hpp  unicode_blocks_15_1_0.hpp  unicode_blocks_16_0_0.hpp  unicode_blocks_9.hpp  unicode_blocks_9_0_0.hpp
src/: unicode_cpp_generator.cpp
